changed: wg-easy - bump version to 0.1.16 added: wg-easy - externalIPs support in values.yaml

--- a/charts/wg-easy/Chart.yaml
+++ b/charts/wg-easy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wg-easy
 description: Using the offical wg-easy/wg-easy image with almost any environment variables for K8s. Supporting Init Mode.
 type: application
-version: 0.1.15
+version: 0.1.16
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wg-easy/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -21,11 +21,8 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: fixed
-      description: "wrong indentation of externalIPs in service"
-      links: 
-        - name: GitHub PR
-          url: https://github.com/slydlake/helm-charts/pull/8
+    - kind: added
+      description: "externalIPs in values.yaml"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wg-easy
