changed: wireguard - bump version to 0.1.14 added: wireguard - support for LoadBalancer service type and externalIPs

--- a/charts/wireguard/values.yaml
+++ b/charts/wireguard/values.yaml
@@ -221,6 +221,8 @@ service:
   port: 51820
   # This sets the NodePort
   nodePort: 31822
+  # External IPs to bind the LoadBalancer service to (if using LoadBalancer type)
+  externalIPs: []
 
 resources:
   {}
