--- a/charts/wireguard/templates/service.yaml
+++ b/charts/wireguard/templates/service.yaml
@@ -16,6 +16,12 @@ spec:
       {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
+  {{- if eq .Values.service.type "LoadBalancer" }}
+  {{- if .Values.service.externalIPs }}
+  externalIPs:
+    {{- toYaml .Values.service.externalIPs | nindent 8 }}
+  {{- end }}
+  {{- end }}
   selector:
     {{- include "wireguard.selectorLabels" . | nindent 4 }}
 {{- end }}
