--- a/.github/workflows/oci-release.yaml
+++ b/.github/workflows/oci-release.yaml
@@ -225,43 +225,27 @@ jobs:
           echo "To verify signature:"
           echo "cosign verify $chart_ref --certificate-oidc-issuer https://token.actions.githubusercontent.com --certificate-identity https://github.com/${{ github.repository }}/.github/workflows/oci-release.yaml@refs/heads/main"
 
-  # Separate job for ArtifactHub metadata upload (only runs once per workflow)
-  upload-artifacthub-metadata:
-    name: Upload ArtifactHub Repository Metadata
-    permissions:
-      contents: read
-      packages: write
-    runs-on: ubuntu-latest
-    needs: oci-release
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install ORAS
+      - name: Upload ArtifactHub metadata for this chart
+        if: steps.chart-changes.outputs.skip == 'false'
         run: |
-          curl -LO "https://github.com/oras-project/oras/releases/download/v1.2.0/oras_1.2.0_linux_amd64.tar.gz"
-          mkdir -p oras-install/
-          tar -zxf oras_*.tar.gz -C oras-install/
-          sudo mv oras-install/oras /usr/local/bin/
-          rm -rf oras_*.tar.gz oras-install/
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.SLYBASE_GHCR_TOKEN }}
-
-      - name: Upload ArtifactHub repository metadata
-        run: |
-          echo "Uploading ArtifactHub repository metadata..."
+          chart_name="${{ steps.chart-changes.outputs.chart_name }}"
+          
+          echo "Uploading ArtifactHub metadata for chart: $chart_name"
+          
+          # Check if chart-specific artifacthub-repo.yml exists
+          if [ -f "charts/$chart_name/artifacthub-repo.yml" ]; then
+            echo "Found chart-specific metadata file: charts/$chart_name/artifacthub-repo.yml"
+            metadata_file="charts/$chart_name/artifacthub-repo.yml"
+          else
+            echo "No chart-specific metadata found, using global metadata"
+            metadata_file="artifacthub-repo.yml"
+          fi
+          
+          echo "Pushing metadata to: ghcr.io/slybase/charts/$chart_name:artifacthub.io"
           
           oras push \
-            ghcr.io/slybase/charts:artifacthub.io \
+            "ghcr.io/slybase/charts/$chart_name:artifacthub.io" \
             --config /dev/null:application/vnd.cncf.artifacthub.config.v1+yaml \
-            artifacthub-repo.yml:application/vnd.cncf.artifacthub.repository-metadata.layer.v1.yaml
+            "$metadata_file:application/vnd.cncf.artifacthub.repository-metadata.layer.v1.yaml"
           
-          echo "✅ ArtifactHub metadata uploaded successfully"
-          echo "Repository can now be added to ArtifactHub with URL: oci://ghcr.io/slybase/charts"
+          echo "✅ ArtifactHub metadata uploaded successfully for $chart_name"
