--- a/charts/wg-easy/Chart.yaml
+++ b/charts/wg-easy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wg-easy
 description: Using the offical wg-easy/wg-easy image with almost any environment variables for K8s. Supporting Init Mode.
 type: application
-version: 0.1.16
+version: 0.1.17
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wg-easy/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -21,8 +21,16 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
+    - kind: changed
+      description: "Improved PodSecurity Standards compliance with minimal privileges"
     - kind: added
-      description: "externalIPs in values.yaml"
+      description: "OCI-repo called SlyBase"
+    - kind: added
+      description: "Improved ServiceMonitor namespace isolation for metrics."
+    - kind: changed
+      description: "AppVersion for wg-easy for default image tag."
+    - kind: changed
+      description: "sample value and secret in separate folder."
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wg-easy
