--- a/charts/wg-easy/samples/values.yaml
+++ b/charts/wg-easy/samples/values.yaml
@@ -12,15 +12,13 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   # recommended to use higher then 15 because of new environment variables and database change
-  tag: 15.1.0
-
+  tag:
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
 # This is to override the chart name.
 nameOverride: ""
 fullnameOverride: "server"
-
 
 # DNS policy and configuration of the pod
 # E.g.
@@ -39,6 +37,17 @@ fullnameOverride: "server"
 # Expose the service on the host network
 # hostNetwork: true
 
+# deployment strategy type
+# NOTE: Set it to `Recreate` if you use a PersistentVolume that cannot be mounted on multiple pods
+# E.g.
+# updateStrategy:
+#   rollingUpdate:
+#     maxSurge: 25%
+#     maxUnavailable: 25%
+#   type: RollingUpdate
+updateStrategy:
+  type: RollingUpdate
+
 # Init containers
 # initContainers:
 #   - name: do-something
@@ -54,7 +63,6 @@ initContainers: []
 #     imagePullPolicy: Always
 sidecars: []
 
-
 # persistent volume claim for wireguard configuration
 storage:
   # Name of an existing PVC to use
@@ -65,7 +73,7 @@ storage:
   size: 100Mi
   # accessModes is required when using a new PVC
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   # annotations to add to the PVC
   annotations: {}
   # labels to add to the PVC
@@ -76,7 +84,7 @@ storage:
   resourcePolicy: delete
 
 config:
-  # Optional configuration, 
+  # Optional configuration,
   # For more information see: https://wg-easy.github.io/wg-easy/latest/advanced/config/optional-config/
 
   # IP address web UI binds to. E.g. 0.0.0.0 or localhost
@@ -86,7 +94,7 @@ config:
   insecure: true
   # If IPv6 support should be disabled
   disable_ipv6: true
-  
+
   # for unattended setup
   # For more information see: https://wg-easy.github.io/wg-easy/latest/advanced/config/unattended-setup/
   init:
@@ -104,7 +112,7 @@ config:
     host: "server.wg-easy.svc.cluster.local"
     # Sets global dns setting
     dns: "1.1.1.1"
-    
+
     # Sets IPv4 cidr
     ipv4_cidr: "10.8.0.0/24"
     # Sets IPv6 cidr
@@ -139,7 +147,7 @@ serviceAccount:
 # For more information see: https://wg-easy.github.io/wg-easy/latest/advanced/metrics/prometheus/
 serviceMonitor:
   # Specifies whether a ServiceMonitor should be created
-  # Additionally you have to enable it in the WebUI: Go to Admin Panel > General and enable Prometheus 
+  # Additionally you have to enable it in the WebUI: Go to Admin Panel > General and enable Prometheus
   create: true
   # Annotations to add to the ServiceMonitor
   annotations: {}
@@ -151,6 +159,8 @@ serviceMonitor:
   interval: 30s
   # Path to scrape metrics from
   metricsPath: /metrics/prometheus
+  # Name of the namespace to create the ServiceMonitor in. Defaults to the release namespace.
+  namespace: ""
   # Name of the existing secret to use for the ServiceMonitor, if used in the WebUI
   existingSecret: "wg-metrics"
   # Key within the existing secret to use for the ServiceMonitor
@@ -163,22 +173,25 @@ podAnnotations: {}
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
 securityContext:
-  privileged: true
-  allowPrivilegeEscalation: true
+  allowPrivilegeEscalation: false
   capabilities:
     add:
-      - NET_ADMIN
-      - SYS_MODULE
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+      - NET_ADMIN # Required for VPN interface creation and management
+      - NET_RAW # Required for iptables NAT operations
+      # - SYS_MODULE   # Uncomment only if wireguard module not already loaded (kernels < 5.6)
+    drop:
+      - ALL
+  readOnlyRootFilesystem: false # WireGuard needs to write config and logs
+  runAsNonRoot: false # WireGuard needs root for network operations
+  runAsUser: 0
+  seccompProfile:
+    type: RuntimeDefault # Required for PodSecurity Standards compliance
+  # privileged: true            # Avoid privileged mode - use specific capabilities instead
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
@@ -196,16 +209,19 @@ service:
     type: NodePort
     # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
     port: 51830
-    # This sets the nodeport 
+    # This sets the nodeport
     nodePort: 30200
     # Annotations to add to the service
     annotations: {}
+    # External IPs to bind the LoadBalancer service to (if using LoadBalancer type)
+    externalIPs: []
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: false
   className: ""
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -218,7 +234,8 @@ ingress:
   #    hosts:
   #      - wg-easy.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
