--- a/charts/wg-easy/values.yaml
+++ b/charts/wg-easy/values.yaml
@@ -12,7 +12,7 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   # recommended to use higher then 15 because of new environment variables and database change
-  tag: 15.1.0
+  tag:
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -159,6 +159,8 @@ serviceMonitor:
   interval: 30s
   # Path to scrape metrics from
   metricsPath: /metrics/prometheus
+  # Name of the namespace to create the ServiceMonitor in. Defaults to the release namespace.
+  namespace: ""
   # Name of the existing secret to use for the ServiceMonitor, if used in the WebUI
   existingSecret: ""
   # Key within the existing secret to use for the ServiceMonitor
@@ -176,18 +178,20 @@ podSecurityContext:
   # fsGroup: 2000
 
 securityContext:
-  privileged: true
-  allowPrivilegeEscalation: true
+  allowPrivilegeEscalation: false
   capabilities:
     add:
-      - NET_ADMIN
-      - SYS_MODULE
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+      - NET_ADMIN # Required for VPN interface creation and management
+      - NET_RAW # Required for iptables NAT operations
+      # - SYS_MODULE   # Uncomment only if wireguard module not already loaded (kernels < 5.6)
+    drop:
+      - ALL
+  readOnlyRootFilesystem: false # WireGuard needs to write config and logs
+  runAsNonRoot: false # WireGuard needs root for network operations
+  runAsUser: 0
+  seccompProfile:
+    type: RuntimeDefault # Required for PodSecurity Standards compliance
+  # privileged: true            # Avoid privileged mode - use specific capabilities instead
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
