added: dependabot configuration for wg-easy updates changed: bump_chart_version script to include values.yaml for image annotations

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,7 @@ updates:
       - dependency-name: "docker.io/mariadb"
       - dependency-name: "docker.io/memcached"
       - dependency-name: "lusotycoon/apache-exporter"
+  - package-ecosystem: "helm"
+    directory: "/charts/wg-easy"
+    schedule:
+      interval: "weekly"
