Remove deprecated client secret YAML and update deployment configuration
- Deleted the `secret.client.test.yaml` file as it contained deprecated secret configurations.
- Enhanced the `deployment.yaml` to conditionally set security context based on values provided, including user and group IDs.
- Updated the `values.schema.json` to reflect changes in required fields and added new properties for pod and container security contexts.
- Modified `values.yaml` to set default values for user and group IDs, and updated image tag and digest for better version control.

--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -3,6 +3,7 @@ name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
 version: 0.1.14
+appVersion: "1.0.20250521"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -22,13 +23,19 @@ annotations:
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
     - kind: added
-      description: "LoadBalancer service type support"
+      description: "Digest field for the image to improve security"
     - kind: added
-      description: "externalIPs in values.yaml"
+      description: "Pinned appVersion and image to 1.0.20250521"
+    - kind: changed
+      description: "PUID and PGID environment variables set to .Values.wireguard.PUID and .Values.wireguard.PGID"
+    - kind: fixed
+      description: "Security context improvements for minimal privilege principle"
+    - kind: changed
+      description: "Sample values files moved to samples/ directory"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
-      image: docker.io/linuxserver/wireguard:latest
+      image: docker.io/linuxserver/wireguard:1.0.20250521@sha256:c9863e07db79437228fa6b174523491abf9c560fb4c273a635214440e7b46c41
 keywords:
   - wireguard
   - vpn
