--- a/charts/wireguard/samples/server.values.yaml
+++ b/charts/wireguard/samples/server.values.yaml
@@ -1,11 +1,12 @@
-
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: linuxserver/wireguard
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "1.0.20250521"
+  # digest of the image
+  digest: "sha256:c9863e07db79437228fa6b174523491abf9c560fb4c273a635214440e7b46c41"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -76,6 +77,12 @@ wireguard:
   # If not specified the default value is: '0.0.0.0/0, ::0/0' This will cause ALL traffic to route through the VPN, if you want split tunneling, set this to only the IPs you would like to use the tunnel AND the ip of the server's WG ip, such as 10.13.13.1.
   # allowedIPs: "0.0.0.0/0, ::0/0"
 
+  # see for more information https://github.com/linuxserver/docker-wireguard?tab=readme-ov-file#user--group-identifiers
+  # UserID, default 1000
+  PUID: 1000
+  # GroupID, default 1000
+  PGID: 1000
+
   # extra environment variables to set in the wireguard container
   # E.g.
   # extraEnvVars:
@@ -109,7 +116,7 @@ wireguard:
       size: 250Mi
       # accessModes is required when using a new PVC
       accessModes:
-      - ReadWriteOnce
+        - ReadWriteOnce
       # annotations to add to the PVC
       annotations: {}
       # labels to add to the PVC
@@ -117,19 +124,13 @@ wireguard:
       # selector to add to the PVC
       selector: {}
       # resource policy of the PVC
-      resourcePolicy: keep
+      resourcePolicy: delete
 
     # Use this to set values of the wireguard configuration instead of existingSecret
     config:
       # External IP or domain name. If set to auto, the container will try to determine and set the external IP automatically (for a static IP address)
       # This address will be used by the WireGuard clients to connect to the server
-      address: vpn.example.com
-
-      # see for more information https://github.com/linuxserver/docker-wireguard?tab=readme-ov-file#user--group-identifiers
-      # UserID, default 1000
-      # PUID: 1000
-      # GroupID, default 1000
-      # PGID: 1000
+      address: server.wireguard.svc.cluster.local
 
       # Number of peers to create confs for. Required for server mode. Can also be a list of names: myPC,myPhone,myTablet (alphanumeric only). Default is 1
       peers: "test"
@@ -170,7 +171,7 @@ wireguard:
       persistentKeepalive: 25
 
       # Endpoint ip or hostname with port of the WireGuard server
-      endpoint: "server-wireguard.wireguard.svc.cluster.local:51820"
+      endpoint: "server.wireguard.svc.cluster.local:51820"
 
 # This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
 serviceAccount:
@@ -192,21 +193,24 @@ podAnnotations: {}
 podLabels: {}
 
 podSecurityContext: {}
-  # fsGroup: 2000
+# default is:
+# runAsUser: 1000
+# runAsGroup: 1000
+# fsGroup: 1000
 
 # Container Security Context
 securityContext: {}
-# when used as server
-  # allowPrivilegeEscalation: true
-  # capabilities:
-  #   add:
-  #   - NET_ADMIN
-  #   - SYS_MODULE
-  # readOnlyRootFilesystem: false
-  # runAsNonRoot: true
-  # runAsUser: 1000
-# when used as client
-  # privileged: true
+# default is:
+# capabilities:
+#   add:
+#     - NET_ADMIN
+#   drop:
+#     - ALL
+# privileged: true
+# allowPrivilegeEscalation: true
+# readOnlyRootFilesystem: false
+# runAsNonRoot: false
+# runAsUser: 0
 
 # used for server mode
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
@@ -217,8 +221,16 @@ service:
   port: 51820
   # This sets the NodePort
   nodePort: 31822
+  # External IPs to bind the LoadBalancer service to (if using LoadBalancer type)
+  externalIPs: []
 
-resources: {}
+resources:
+  limits:
+    cpu: 500m
+    memory: 256Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
