--- a/charts/wireguard/values.yaml
+++ b/charts/wireguard/values.yaml
@@ -1,23 +1,21 @@
-# Default values for wireguard.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
-
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: linuxserver/wireguard
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "1.0.20250521"
+  # digest of the image
+  digest: "sha256:c9863e07db79437228fa6b174523491abf9c560fb4c273a635214440e7b46c41"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
 # This is to override the chart name.
 nameOverride: ""
 fullnameOverride: ""
+
+# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
+replicaCount: 1
 
 # DNS policy and configuration of the pod
 # E.g.
@@ -68,7 +66,7 @@ wireguard:
   # these options are used in server or client mode
 
   # optional timezone to use, see this list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List Default is "Etc/UTC"
-  # timezone: "Etc/UTC"
+  timezone: ""
 
   # optional DNS server set in peer/client configs (can be set as 8.8.8.8)
   # for server default is "auto" (uses host's DNS via included CoreDNS forward)
@@ -78,6 +76,12 @@ wireguard:
   # The IPs/Ranges for Client/Server. Defines what IPs/Ranges will be able to reach using the VPN connection.
   # If not specified the default value is: '0.0.0.0/0, ::0/0' This will cause ALL traffic to route through the VPN, if you want split tunneling, set this to only the IPs you would like to use the tunnel AND the ip of the server's WG ip, such as 10.13.13.1.
   # allowedIPs: "0.0.0.0/0, ::0/0"
+
+  # see for more information https://github.com/linuxserver/docker-wireguard?tab=readme-ov-file#user--group-identifiers
+  # UserID, default 1000
+  PUID: 1000
+  # GroupID, default 1000
+  PGID: 1000
 
   # extra environment variables to set in the wireguard container
   # E.g.
@@ -127,12 +131,6 @@ wireguard:
       # External IP or domain name. If set to auto, the container will try to determine and set the external IP automatically (for a static IP address)
       # This address will be used by the WireGuard clients to connect to the server
       address: vpn.example.com
-
-      # see for more information https://github.com/linuxserver/docker-wireguard?tab=readme-ov-file#user--group-identifiers
-      # UserID, default 1000
-      # PUID: 1000
-      # GroupID, default 1000
-      # PGID: 1000
 
       # Number of peers to create confs for. Required for server mode. Can also be a list of names: myPC,myPhone,myTablet (alphanumeric only). Default is 1
       peers: "1"
@@ -194,23 +192,25 @@ podAnnotations: {}
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
-podSecurityContext:
-  {}
-  # fsGroup: 2000
+podSecurityContext: {}
+# default is:
+# runAsUser: 1000
+# runAsGroup: 1000
+# fsGroup: 1000
 
 # Container Security Context
 securityContext: {}
-# when used as server
-# allowPrivilegeEscalation: true
+# default is:
 # capabilities:
 #   add:
-#   - NET_ADMIN
-#   - SYS_MODULE
-# readOnlyRootFilesystem: false
-# runAsNonRoot: true
-# runAsUser: 1000
-# when used as client
+#     - NET_ADMIN
+#   drop:
+#     - ALL
 # privileged: true
+# allowPrivilegeEscalation: true
+# readOnlyRootFilesystem: false
+# runAsNonRoot: false
+# runAsUser: 0
 
 # used for server mode
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
@@ -231,8 +231,8 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #   cpu: 500m
+  #   memory: 256Mi
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
