--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
-version: 0.1.15
-appVersion: "1.0.20250521"
+version: 0.1.16
+appVersion: 1.0.20250521
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -22,20 +22,12 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: added
-      description: "Digest field for the image to improve security"
-    - kind: added
-      description: "Pinned appVersion and image to 1.0.20250521"
-    - kind: changed
-      description: "PUID and PGID environment variables set to .Values.wireguard.PUID and .Values.wireguard.PGID"
     - kind: fixed
-      description: "Security context improvements for minimal privilege principle"
-    - kind: changed
-      description: "Sample values files moved to samples/ directory"
+      description: "Pinned chart version"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
-      image: docker.io/linuxserver/wireguard:1.0.20250521@sha256:c9863e07db79437228fa6b174523491abf9c560fb4c273a635214440e7b46c41
+      image: docker.io/linuxserver/wireguard:1.0.20250521
 keywords:
   - wireguard
   - vpn
