--- a/charts/wordpress/values.yaml
+++ b/charts/wordpress/values.yaml
@@ -439,9 +439,6 @@ ingress:
   enabled: false
   ## @param ingress.className string Ingress class name
   className: ""
-  ## @param ingress.maxBodySize string Maximal body size
-  ## Maximal body size (default: 64m - increase if uploads to Wordpress failing)
-  maxBodySize: 64m
   ## @param ingress.annotations object Ingress annotations
   annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -457,6 +454,24 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+
+  ## @param ingress.useHttpsBackend boolean Ingress use https backend
+  # when true, backend uses service.ports.https; otherwise uses service.ports.http
+  useHttpsBackend: false
+
+  ## @param ingress.extraRules Additional rules for ingress
+  ## https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-rules
+  # extraRules:
+  # - host: wordpress.local
+  #     http:
+  #       path: /
+  #       backend:
+  #         service:
+  #           name: wordpress-svc
+  #           port:
+  #             name: http
+  #
+  extraRules: []
 
 ## @section Resource parameters
 resources: {}
